# shield-harness

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PRD.md
samples/seed-handcurated/clean/: seed-clean-001.toml  seed-clean-001.txt  seed-clean-002.toml  seed-clean-002.txt  seed-clean-003.md  seed-clean-003.toml  seed-clean-004.md  seed-clean-004.toml  seed-clean-005.html  seed-clean-005.toml  seed-clean-006.toml  seed-clean-006.txt
samples/seed-handcurated/threat/: seed-threat-001.toml  seed-threat-001.txt  seed-threat-002.md  seed-threat-002.toml  seed-threat-003.html  seed-threat-003.toml  seed-threat-004.toml  seed-threat-004.txt  seed-threat-005.toml  seed-threat-005.txt  seed-threat-006.md  seed-threat-006.toml
src/: cli.rs  diff.rs  main.rs
src/corpus/: loader.rs  mod.rs  sample.rs  validate.rs
src/import/: mod.rs
src/metrics/: latency.rs  mod.rs  prf.rs
src/report/: mod.rs  record.rs  summary.rs
src/runner/: introspect.rs  invoke.rs  lcs.rs  log_scrape.rs  mod.rs  orchestrator.rs  probe.rs  scan_report.rs
src/synth/: lmstudio.rs  mod.rs
src/util/: hash.rs  mod.rs  paths.rs  time.rs
tasks/: BACKLOG.md  BUGS.md  CONTINUITY.md  LESSONS.md  REFINEMENT.md  TODO.md
tests/fixtures/loader-basic/cohort-a/clean/: 0001.toml
tests/fixtures/loader-basic/cohort-a/threat/: 0101.toml  0101.txt
tests/fixtures/loader-basic/cohort-b/clean/: 0002.toml  0002.txt
tests/fixtures/validate-cases/cohort-dir-mismatch/wrong-name/clean/: 0001.toml
tests/fixtures/validate-cases/duplicate-id/cohort-x/clean/: 0001.toml
(+13 files in other folders)
