[package]
name = "shield-harness"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "=1.0.227", features = ["derive"] }
serde_json = "=1.0.148"
toml = "=1.1.0"
clap = { version = "=4.6.0", features = ["derive"] }
sha2 = "=0.10.9"
ureq = "=3.2.1"
chrono = { version = "=0.4.43", default-features = false, features = ["clock", "serde"] }
rayon = "=1.11.0"
csv = "=1.3.1"
